--- a/lib.bib
+++ b/lib.bib
@@ -41,3 +41,62 @@
   year={2015},
   organization={ACM}
 }
+
+
+@conference{10,
+author={Burden, Håkan and Heldal, Rogardt and Whittle, Jon},
+title={Comparing and Contrasting Model-Driven Engineering at Three Large Companies},
+booktitle={Proceedings of the 8th ACM/IEEE International Symposium on Empirical Software Engineering and Measurement},
+isbn={978-14-50-32774-9},
+abstract={Hutchinson et al. conducted an interview-based study of how model-driven engineering, MDE, is practiced in 17 companies. Their results include that successful MDE companies develop domain-specific languages; are motivated by a clear business case; and are committed at all levels of the organization. Goal: Whilst the results are useful, the study is a very broad one, with one or two interviewees per company. This paper supplements Hutchinson's study by focusing on three large companies that are applying MDE and undergoing a parallel transition to agile methods. Method: Formal data collection strategies -- 25 semi-structured interviews, observations and progress meetings -- were combined with informal interaction. The data was analysed both inductively for new insights and deductively for comparison with the results of Hutchinson et al. Results: Our findings show how MDE can include domain experts in software development and how agile development and MDE can coexist. In general our results validate the findings of Hutchinson et al. There are two areas where our results differ -- the engineers' sense of control and the appropriateness of their skills and training. Conclusions: Using a combination of data collection strategies and analysis techniques our study casts new light on earlier research as well as contributes with novel insights regarding the adoption of MDE.},
+year={2014},
+keywords={Model-Driven Engineering, Empirical Software Engineering, Case study, Inductive and deductive analysis, Agile practices},
+}
+
+
+@Inbook{11,
+author="Kulkarni, Vinay
+and Barat, Souvik
+and Ramteerthkar, Uday",
+editor="Whittle, Jon
+and Clark, Tony
+and K{\"u}hne, Thomas",
+title="Early Experience with Agile Methodology in a Model-Driven Approach",
+bookTitle="Model Driven Engineering Languages and Systems: 14th International Conference, MODELS 2011, Wellington, New Zealand, October 16-21, 2011. Proceedings",
+year="2011",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="578--590",
+abstract="We are in the business of delivering software intensive business systems using model-driven techniques. Developing suitable code generators is an important step in model-based development of purpose-specific business applications. Hence, it becomes critical to ensure that code generator development doesn't become a bottleneck for the project delivery. After establishing a sophisticated technology infrastructure to facilitate quick and easy adaptation of model-based code generators, we experimented with agile methodology. In this paper, we discuss why pure agile methodology does not work for model-driven software development. We propose a modification to the agile methodology in the form of meta-sprints as a golden mean between agile method and traditional plan-driven method. Early experience with the proposed development method is shared along with the lessons learnt.",
+isbn="978-3-642-24485-8",
+doi="10.1007/978-3-642-24485-8_42",
+url="https://doi.org/10.1007/978-3-642-24485-8_42"
+}
+
+@inproceedings{12,
+author = {Golra, F. R. and Beugnard, A. and Dagnat, F. and Guychard, C. and Guerin, S.},
+title = {{Using free modeling as an agile method for developing domain specific modeling languages}},
+booktitle = {MODELS 2016 : ACM/IEEE 19th International Conference on Model Driven Engineering Languages and Systems},
+year = {2016},
+pages = {24-34},
+note = {OpanFlexo : entreprise - incubaterur Télécom Bretagne jusqu'en 2015}
+}
+
+@inproceedings{secondaryHutchinsonEmpirical,
+ author = {Hutchinson, John and Rouncefield, Mark and Whittle, Jon},
+ title = {Model-driven Engineering Practices in Industry},
+ booktitle = {Proceedings of the 33rd International Conference on Software Engineering},
+ series = {ICSE '11},
+ year = {2011},
+ isbn = {978-1-4503-0445-0},
+ location = {Waikiki, Honolulu, HI, USA},
+ pages = {633--642},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1985793.1985882},
+ doi = {10.1145/1985793.1985882},
+ acmid = {1985882},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {empirical evaluation, model driven engineering, software engineering},
+} 
+
