Written the method section.

--- a/article.tex
+++ b/article.tex
@@ -89,7 +89,42 @@ TODO FAHI write the intro %TODO FAHI
 
 \section{Method}
 
-TODO PAST write the method %TODO PAST
+The methodology used for creating this literature review is loosely based on the \emph{systematic literature review}, as described by Kitchenham et.\,al. in \cite{secondaryKitchenhamSLR}.
+To conduct the review, the following research questions were asked:
+\begin{description}
+\item[RQ 1:] To what extent is Model Driven Engineering used in Agile Development Processes?
+\item[RQ 2:] Does MDSE improve the efficiency within an agile development environment?
+\item[RQ 3:] In what domains and for what purpose is modeling agile processed applied?
+\end{description}
+
+Answers to these questions will help us to understand, if both approaches to Software Engineering are used in combination in practice, if their combination yields positive effects and in what areas it is actually applied. 
+To get profound results we are looking for peer-reviewed scientific publications published in journals or conferences. 
+We decided incorporate the following databases for our search:
+\begin{itemize}
+\item ACM Digital Library
+\item Google Scholar
+\item IEEExplore
+\item ScienceDirect
+\end{itemize}
+
+Each one of the databases was queried with the search string:
+\begin{align}
+	\text{Agile } \textbf{AND} \text{ Model Driven Engineering}
+\end{align}
+
+The search yielded around thirty results in the ACM and IEEE library and more than 3000 results in the two other databases. 
+We decided to restrict the time interval to papers after 2001 as the \emph{Agile Manifesto} \cite{secondaryAgileManifesto} was published in this year, which can be considered to be the beginning of the Agile movement.
+To narrow the search further down, we defined the following inclusion criteria:
+\begin{description}
+\item[Inclusion] conference or journal article, contains practical relevance, papers after 2001
+\end{description}
+
+We applied this criteria by looking at title and abstract of the discovered results. 
+It turned out that most of the found papers did not contain Agile and MDE methodology at the same time.
+Furthermore a lot of papers did not refer to any practical experiences.
+After rigorously applying the filter criteria we ended with 13 papers. 
+For the analysis we did not apply a fixed review protocol due to the size of the found material.
+A survey about discovered result is presented in the next section.
 
 \section{Survey}
 
