--- a/lib.bib
+++ b/lib.bib
@@ -100,3 +100,25 @@ note = {OpanFlexo : entreprise - incubaterur Télécom Bretagne jusqu'en 2015}
  keywords = {empirical evaluation, model driven engineering, software engineering},
 } 
 
+@techreport{secondaryKitchenhamSLR,
+address = {Software Engineering Group School of Computer Science and Mathematics Keele University Keele, Staffs ST5 5BG, UK},
+annote = {Read on 11.09.2017
+---------------------------
+
+see notes on paper},
+author = {Kitchenham, Barbara and Charters, Stuart and Budgen, David and Brereton, Pearl and Turner, Mark and Linkman, Steve and J{\o}rgensen, Magne and Mendes, Emilia and Visaggio, Guiseppe},
+file = {:Users/past/Documents/phd/literature/articles/articles/Kitchenham{\_}2007{\_}GfSLRiSE.pdf:pdf},
+institution = {Evidence Based Software Engineering},
+keywords = {"Methodology","Software Engineering","Systematic Literature Review"},
+month = {jul},
+number = {1},
+title = {{Guidelines for performing Systematic Literature Reviews in Software Engineering}},
+type = {techreport},
+year = {2007}
+}
+
+@misc{secondaryAgileManifesto,
+title={Manifesto for Agile Software Development},
+year=2001,
+howpublished={\url{http://agilemanifesto.org/}}
+}
